--- a/index.ipynb
+++ b/index.ipynb
@@ -70,12 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month=\"January\" # \"January\"\n",
-    "trav"
+    "travel_month"
    ]
   },
   {
@@ -96,13 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_weeks=3 # 3"
+    "number_of_weeks=3 # 3\n",
+    "number_of_weeks"
    ]
   },
   {
@@ -120,7 +141,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks\n",
+    "number_of_week# 5"
    ]
   },
   {
